removed advanced search for now.

--- a/index.html
+++ b/index.html
@@ -543,10 +543,10 @@
 
 <body>
 
-    <div class="modal fade" id="myModal" role="dialog">
+    <!-- <div class="modal fade" id="myModal" role="dialog">
         <div class="modal-dialog">
 
-            <!-- Modal content-->
+      
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -562,7 +562,7 @@
             </div>
 
         </div>
-    </div>
+    </div> -->
 
     <div class="header">
         <img class="rgislogo" src="images/rgislogo.svg" height="90%" alt="RGIS">
@@ -657,7 +657,7 @@
         <!-- <button id="SpatialButton" class="btn btn-primary">Spatial Search</button> -->
         <!-- <button id="hidenav">HideNav</button>
         <button id="shownav">ShowNav</button> -->
-        <button class="advancedsearch" id="advancedsearch">Advanced Search</button>
+        <!-- <button class="advancedsearch" id="advancedsearch">Advanced Search</button> -->
     </div>
     <div class="header2">
         <ol class="breadcr">
