Adjusted workarea height

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         /* border-left: solid;
     border-left-color: #2895be;
      border-left-width: 5px;  */
-        -webkit-transition-property: color, background;
+        /* -webkit-transition-property: color, background;
         -webkit-transition-duration: .2s, .2s;
-        -webkit-transition-timing-function: linear, ease-in;
+        -webkit-transition-timing-function: linear, ease-in; */
     }
 
     .undercard {
@@ -122,7 +122,7 @@
 
     .workarea {
         /* background-color: coral; */
-        height: 95%;
+        height: 94%;
         width: 100%;
     }
 
