--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
         border-style: solid;
     }
 
-  
+
 
     .showhidebutton {
         width: 100px;
@@ -497,7 +497,7 @@
         display: inline-block;
         color: #f6fffe;
         margin-left: 60px;
-        margin-top: 7px;
+        margin-top: 4px;
     }
 
     .cardlabels {
@@ -518,7 +518,7 @@
 
 <body>
 
- 
+
 
     <div class="header">
         <img class="rgislogo" src="images/rgislogo.svg" height="90%" alt="RGIS">
@@ -570,7 +570,7 @@
 
         <div id="map" class="map">
             <button style="display:none;" id="SpatialButton" class="searcbutton">Spatial Search</button>
-
+            <button style="display:none;" id="ClearSpatialButton" class="searcbutton">Clear Spatial Search</button>
         </div>
 
 
@@ -835,7 +835,7 @@
     });
 
     function isNullOrWhiteSpace(str) {
-      
+
         return (/^\s*$/.test(str))
 
     }
@@ -898,7 +898,7 @@
 
     var $accordion = $('#accordion');
     $accordion.on('show.bs.collapse', '.collapse', function () {
-      
+
     });
 
 
@@ -1012,6 +1012,8 @@
         if (window.bbox != "") {
             appendsearchstr = appendsearchstr + "&box=" + window.bbox;
             $('#bboxterm').text(window.bbox);
+        }else{
+            $('#bboxterm').text("anywhere.");
         }
 
         if (window.title != "") {
@@ -1085,7 +1087,7 @@
     function paginationclick(event, page) {
         $('#page-content').text('Page ' + page);
         CurrentPage = page
- 
+
         newOffset = (page * limit) - limit
         offset = newOffset
         appendsearch();
@@ -1133,7 +1135,7 @@
         vectorLayer.setSource(vectorSource)
         vectorLayer.setStyle(styleFunction)
         $('#pagination-gstore').twbsPagination('destroy');
-        html = '<div class="row lineunderrow"><div class="col-md-12">No Datasets found</div></div>'
+        html = '<div ><div class="col-md-1">No Datasets found</div></div><div ><div class="col-md-11">No Datasets found</div></div>'
         $('#results').html(html);
         $(" .dsline").hover(function () {
         });
@@ -1159,6 +1161,8 @@
                     $("#resultsoverlay").fadeOut();
                     $("#results").fadeIn();
                     newFeatures = []
+                    newFeaturesFinal = []
+                    areaArray = []
                     for (var i = 0; i < data.results.length; i++) {
                         currentBox = data.results[i].spatial.bbox
                         currentFeature = {
@@ -1191,10 +1195,27 @@
                                 ]]
                             }
                         }
-
+                        thisgeometry = new ol.geom.Polygon(currentFeature.geometry.coordinates);
+                        areaArray.push({ 'area': thisgeometry.getArea(), 'id': data.results[i].uuid })
                         newFeatures.push(currentFeature)
+                       // console.log(newFeatures)
+
                     }
-                    geojsonObject.features = newFeatures
+                    areaArray.sort(function (a, b) {
+                        return a.area - b.area;
+                    }).reverse();
+                    //console.log(areaArray)
+                    areaArray.forEach(function(item){
+                       // console.log(item.id)
+                        index=newFeatures.findIndex(x => x.id==item.id)
+                        newFeaturesFinal.push(newFeatures[index])
+                    })
+                    //a.findIndex(x => x.prop2=="yutu");
+
+
+                    console.log(newFeaturesFinal)
+
+                    geojsonObject.features = newFeaturesFinal
                     var vectorSource = new ol.source.Vector({
                         features: (new ol.format.GeoJSON()).readFeatures(geojsonObject)
                     });
@@ -1547,16 +1568,16 @@
     };
 
 
-var highlightedFeatures = [],
-  selectStyle = new ol.style.Style({
-                  fill: new ol.style.Fill({
-                    color: 'rgba(0, 0, 0, 0)'
-                }),
-    stroke: new ol.style.Stroke({
-      color: '#4d7285',
-      width: 3
-    })
-  });
+    var highlightedFeatures = [],
+        selectStyle = new ol.style.Style({
+            fill: new ol.style.Fill({
+                color: 'rgba(0, 0, 0, 0)'
+            }),
+            stroke: new ol.style.Stroke({
+                color: '#4d7285',
+                width: 3
+            })
+        });
 
     var styles2 = {
         'Polygon': new ol.style.Style(
@@ -1690,9 +1711,9 @@ var highlightedFeatures = [],
         style: selectStyle
     });
     map.addInteraction(select);
-          select.on('select', function(e) {
-                    collapseall("id" + e.selected["0"].c)
-            $("#collapse" + e.selected["0"].c).collapse('show')
+    select.on('select', function (e) {
+        collapseall("id" + e.selected["0"].c)
+        $("#collapse" + e.selected["0"].c).collapse('show')
 
     });
 
@@ -1743,8 +1764,44 @@ var highlightedFeatures = [],
             map.addInteraction(draw);
         }
     }
+    $('#ClearSpatialButton').click(function (event) {
+        $("#SpatialButton").show()
+        $('#ClearSpatialButton').hide()
+        map.removeInteraction(draw)
+        var feature = event.feature;
+        var features = drawvector.getSource().getFeatures();
+        features.forEach(function (feature) {
+            //console.log(feature.getGeometry().getCoordinates());
+            drawvector.getSource().removeFeature(feature);
+        });
+        window.bbox = ""
+        appendsearch();
+    });
+
+
+        maxPoints = 2;
+        geometryFunction = function (coordinates, geometry) {
+            if (!geometry) {
+                geometry = new ol.geom.Polygon(null);
+            }
+            var start = coordinates[0];
+            var end = coordinates[1];
+            geometry.setCoordinates([
+                [start, [start[0], end[1]], end, [end[0], start[1]], start]
+            ]);
+            return geometry;
+        };
+        tvalue = "LineString"
+        draw = new ol.interaction.Draw({
+            source: drawsource,
+            type: /** @type {ol.geom.GeometryType} */ (tvalue),
+            geometryFunction: geometryFunction,
+            maxPoints: maxPoints
+        });
 
     $('#SpatialButton').click(function (event) {
+        $("#SpatialButton").hide()
+        $('#ClearSpatialButton').show()
         mapisshowing = true
         window.limit = 15
         window.offset = 0
@@ -1803,25 +1860,25 @@ var highlightedFeatures = [],
         // var vector = new ol.layer.Vector({
         //   source: source
         // });
-        maxPoints = 2;
-        geometryFunction = function (coordinates, geometry) {
-            if (!geometry) {
-                geometry = new ol.geom.Polygon(null);
-            }
-            var start = coordinates[0];
-            var end = coordinates[1];
-            geometry.setCoordinates([
-                [start, [start[0], end[1]], end, [end[0], start[1]], start]
-            ]);
-            return geometry;
-        };
-        tvalue = "LineString"
-        draw = new ol.interaction.Draw({
-            source: drawsource,
-            type: /** @type {ol.geom.GeometryType} */ (tvalue),
-            geometryFunction: geometryFunction,
-            maxPoints: maxPoints
-        });
+        // maxPoints = 2;
+        // geometryFunction = function (coordinates, geometry) {
+        //     if (!geometry) {
+        //         geometry = new ol.geom.Polygon(null);
+        //     }
+        //     var start = coordinates[0];
+        //     var end = coordinates[1];
+        //     geometry.setCoordinates([
+        //         [start, [start[0], end[1]], end, [end[0], start[1]], start]
+        //     ]);
+        //     return geometry;
+        // };
+        // tvalue = "LineString"
+        // draw = new ol.interaction.Draw({
+        //     source: drawsource,
+        //     type: /** @type {ol.geom.GeometryType} */ (tvalue),
+        //     geometryFunction: geometryFunction,
+        //     maxPoints: maxPoints
+        // });
         map.addInteraction(draw);
 
         // addInteraction("Polygon");
